retrieveRecruitingApp/objects/Position__c.object
<CustomObject>
    <fields>
        <fullName>Apex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C#</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>IF( ISBLANK( Close_Date__c ) ,
          TODAY()  -  Open_Date__c ,
          Close_Date__c  -  Open_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Educational_Requirements__c</fullName>
        <label>Educational Requirements</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Retail Operations</fullName>
                </value>
                <value>
                    <fullName>Warehousing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hire_By__c</fullName>
        <label>Hire By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Java__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Java</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Javascript__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Javascript</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <label>Job Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FN-100</fullName>
                </value>
                <value>
                    <fullName>FN-200</fullName>
                </value>
                <value>
                    <fullName>FN-300</fullName>
                </value>
                <value>
                    <fullName>FN-400</fullName>
                </value>
                <value>
                    <fullName>HR-100</fullName>
                </value>
                <value>
                    <fullName>HR-200</fullName>
                </value>
                <value>
                    <fullName>HR-300</fullName>
                </value>
                <value>
                    <fullName>HR-400</fullName>
                </value>
                <value>
                    <fullName>IT-100</fullName>
                </value>
                <value>
                    <fullName>IT-200</fullName>
                </value>
                <value>
                    <fullName>IT-300</fullName>
                </value>
                <value>
                    <fullName>IT-400</fullName>
                </value>
                <value>
                    <fullName>RO-100</fullName>
                </value>
                <value>
                    <fullName>RO-200</fullName>
                </value>
                <value>
                    <fullName>RO-300</fullName>
                </value>
                <value>
                    <fullName>RO-400</fullName>
                </value>
                <value>
                    <fullName>WH-100</fullName>
                </value>
                <value>
                    <fullName>WH-200</fullName>
                </value>
                <value>
                    <fullName>WH-300</fullName>
                </value>
                <value>
                    <fullName>WH-400</fullName>
                </value>
                <value>
                    <fullName>MC-100</fullName>
                </value>
                <value>
                    <fullName>MC-200</fullName>
                </value>
                <value>
                    <fullName>MC-300</fullName>
                </value>
                <value>
                    <fullName>MC-400</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>San Francisco, CA</fullName>
                    <default>true</default>
                    <label>San Francisco, CA</label>
                </value>
                <value>
                    <fullName>Austin, TX</fullName>
                </value>
                <value>
                    <fullName>Boulder, CO</fullName>
                </value>
                <value>
                    <fullName>London, England</fullName>
                </value>
                <value>
                    <fullName>New York, NY</fullName>
                </value>
                <value>
                    <fullName>Mumbai, India</fullName>
                </value>
                <value>
                    <fullName>Sydney, Australia</fullName>
                </value>
                <value>
                    <fullName>Tokyo, Japan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Pay__c</fullName>
        <label>Max Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Pay__c</fullName>
        <label>Min Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Responsibilities__c</fullName>
        <label>Responsibilities</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skills_Required__c</fullName>
        <label>Skills Required</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Position</fullName>
                    <default>true</default>
                    <label>New Position</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Open - Approved</fullName>
                </value>
                <value>
                    <fullName>Closed - Filled</fullName>
                </value>
                <value>
                    <fullName>Closed - Not Approved</fullName>
                </value>
                <value>
                    <fullName>Closed - Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travel_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
                <value>
                    <fullName>Internship</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>Job_Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <recordTypes>
        <fullName>IT_Position</fullName>
        <active>true</active>
        <description>Record type for all IT positions.</description>
        <label>IT Position</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Position</fullName>
        <active>true</active>
        <description>Record type for all non-IT positions.</description>
        <label>Standard Position</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Hire_By_has_to_be_after_Open_Date</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Open_Date__c &gt; Hire_By__c)</errorConditionFormula>
        <errorMessage>Hire By has to be after Open Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Min_lessthan_Max</fullName>
        <active>true</active>
        <errorConditionFormula>Min_Pay__c &gt; Max_Pay__c</errorConditionFormula>
        <errorMessage>Min pay have to be less than Max pay</errorMessage>
    </validationRules>
</CustomObject>